WIP Use fix for https://bugs.openjdk.org/browse/JDK-8205592 in slow path.